Implement ccd high level setup for importing definitions